--- a/index.html
+++ b/index.html
@@ -643,7 +643,109 @@
               </div>
             </div>
           </div>
-        </div>          
+        </div>      
+        <div class="col-lg-4 col-sm-6 night no-padding">
+            <div class="item-img"> <a class="single-image"></a>
+            <div class="part-img"> <img id="NightImg1" src="images/Night 631.png" alt="image" style="display: none;">
+   <script>
+      const NigBtn1 = document.getElementById("NigBtnID");
+      const NigImg1 = document.getElementById("NightImg1"); 
+      NigBtn1.addEventListener("click", () => { 
+         NigImg1.style.display = "block"; 
+      });
+   </script>
+                <div class="overlay-img">
+                <h4>Night</h4>
+                <h6>Image 1</h6>
+              </div>
+            </div>
+          </div>                 
+        </div>    
+        <div class="col-lg-4 col-sm-6 night no-padding">
+            <div class="item-img"> <a class="single-image"></a>
+            <div class="part-img"> <img id="NightImg2" src="images/Night 514.png" alt="image" style="display: none;">
+   <script>
+      const NigBtn2 = document.getElementById("NigBtnID");
+      const NigImg2 = document.getElementById("NightImg2"); 
+      NigBtn2.addEventListener("click", () => { 
+         NigImg2.style.display = "block"; 
+      });
+   </script>
+                <div class="overlay-img">
+                <h4>Night</h4>
+                <h6>Image 2</h6>
+              </div>
+            </div>
+          </div>                 
+        </div>        
+        <div class="col-lg-4 col-sm-6 night no-padding">
+            <div class="item-img"> <a class="single-image"></a>
+            <div class="part-img"> <img id="NightImg3" src="images/Night 777.png" alt="image" style="display: none;">
+   <script>
+      const NigBtn3 = document.getElementById("NigBtnID");
+      const NigImg3 = document.getElementById("NightImg3"); 
+      NigBtn3.addEventListener("click", () => { 
+         NigImg3.style.display = "block"; 
+      });
+   </script>
+                <div class="overlay-img">
+                <h4>Night</h4>
+                <h6>Image 3</h6>
+              </div>
+            </div>
+          </div>                 
+        </div>            
+        <div class="col-lg-4 col-sm-6 night no-padding">
+            <div class="item-img"> <a class="single-image"></a>
+            <div class="part-img"> <img id="NightImg4" src="images/Night 631L.png" alt="image" style="display: none;">
+   <script>
+      const NigBtn4 = document.getElementById("NigBtnID");
+      const NigImg4 = document.getElementById("NightImg4"); 
+      NigBtn4.addEventListener("click", () => { 
+         NigImg4.style.display = "block"; 
+      });
+   </script>
+                <div class="overlay-img">
+                <h4>Night</h4>
+                <h6>Annotation 1</h6>
+              </div>
+            </div>
+          </div>                 
+        </div>    
+        <div class="col-lg-4 col-sm-6 night no-padding">
+            <div class="item-img"> <a class="single-image"></a>
+            <div class="part-img"> <img id="NightImg5" src="images/Night 514L.png" alt="image" style="display: none;">
+   <script>
+      const NigBtn5 = document.getElementById("NigBtnID");
+      const NigImg5 = document.getElementById("NightImg5"); 
+      NigBtn5.addEventListener("click", () => { 
+         NigImg5.style.display = "block"; 
+      });
+   </script>
+                <div class="overlay-img">
+                <h4>Night</h4>
+                <h6>Annotation 2</h6>
+              </div>
+            </div>
+          </div>                 
+        </div>        
+        <div class="col-lg-4 col-sm-6 night no-padding">
+            <div class="item-img"> <a class="single-image"></a>
+            <div class="part-img"> <img id="NightImg6" src="images/Night 777L.png" alt="image" style="display: none;">
+   <script>
+      const NigBtn6 = document.getElementById("NigBtnID");
+      const NigImg6 = document.getElementById("NightImg6"); 
+      NigBtn6.addEventListener("click", () => { 
+         NigImg6.style.display = "block"; 
+      });
+   </script>
+                <div class="overlay-img">
+                <h4>Night</h4>
+                <h6>Annotation 3</h6>
+              </div>
+            </div>
+          </div>                 
+        </div>                      
 </div>        
 </div>     
 </div>
