--- a/index.html
+++ b/index.html
@@ -93,15 +93,15 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 section-title text-center">
-        <h3>We Are Best At Our Service</h3>
-        <p>Vestibulum elementum dui tempus dolor gravida, vel mattis erat fermentum.</p>
+        <h3>O2DTD Dataset Features</h3>
+       <! <p>Vestibulum elementum dui tempus dolor gravida, vel mattis erat fermentum.</p> >
         <span class="section-title-line"></span> </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
         <div class="service-box bg-white text-center">
           <div class="icon"> <i class="fas fa-chart-line"></i> </div>
           <div class="icon-text">
-            <h4 class="title-box">Chart Line</h4>
-            <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
+            <h4 class="title-box">First Dataset for Desert Free Space Detection</h4>
+            <p>The O2DTD dataset is the first dataset curated to detect desert trails, promoting the off-road autonomous navigation and driving field.</p>
           </div>
         </div>
       </div>
@@ -109,8 +109,8 @@
         <div class="service-box bg-white text-center">
           <div class="icon"> <i class="fas fa-bullhorn "></i> </div>
           <div class="icon-text">
-            <h4 class="title-box">Quick Anouncement</h4>
-            <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
+            <h4 class="title-box">Collected in Natural Desert Environment</h4>
+            <p>The O2DTD dataset is collected in Abu Dhabi, United Arab Emirates, in an open desert space at 24°22.5'N latitude and 54°34.5'E longitude.</p>
           </div>
         </div>
       </div>
@@ -118,8 +118,8 @@
         <div class="service-box bg-white text-center">
           <div class="icon"> <i class="fas fa-map-marked"></i> </div>
           <div class="icon-text">
-            <h4 class="title-box">Mark Location</h4>
-            <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
+            <h4 class="title-box">Cover Six Different Times of the Day</h4>
+            <p>The O2DTD dataset is collected at six different times of the day to cover the light conditions affecting autonomous navigation (dawn, morning, afternoon, sunset, twilight, and night).</p>
           </div>
         </div>
       </div>
@@ -127,8 +127,8 @@
         <div class="service-box bg-white text-center">
           <div class="icon"> <i class="fas fa-bug"></i> </div>
           <div class="icon-text">
-            <h4 class="title-box">Bug Solution</h4>
-            <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
+            <h4 class="title-box">Easy-to-Use Data Format</h4>
+            <p>All the images and annotations in the O2DTD dataset are stored in PNG format, enabling the researchers to use them for their research easily.</p>
           </div>
         </div>
       </div>
@@ -136,8 +136,8 @@
         <div class="service-box bg-white text-center">
           <div class="icon"> <i class="fas fa-comments"></i> </div>
           <div class="icon-text">
-            <h4 class="title-box">Fast Communication</h4>
-            <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
+            <h4 class="title-box">Over 5,000 Images with Pixel Level Annotations</h4>
+            <p>The O2DTD dataset contains over 5,000 images with fine-grained pixel level annotations of three classes (sky, ground, and trail).</p>
           </div>
         </div>
       </div>
@@ -145,8 +145,8 @@
         <div class="service-box bg-white text-center">
           <div class="icon"> <i class="fas fa-paint-brush"></i> </div>
           <div class="icon-text">
-            <h4 class="title-box">Clean Design</h4>
-            <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
+            <h4 class="title-box">Segmentation Benchmark</h4>
+            <p>We also present an off-road desert trail segmentation benchmark called Desert Trail Segmentation Network (DTSNet). The proposed DTSNet model is trained using various loss functions, optimizers, and learning rates.</p>
           </div>
         </div>
       </div>
