--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="row">
       <div class="col-md-12 section-title text-center">
         <h3>O2DTD Dataset Features</h3>
-       <! <p>Vestibulum elementum dui tempus dolor gravida, vel mattis erat fermentum.</p> >
+        <p>Vestibulum elementum dui tempus dolor gravida, vel mattis erat fermentum.</p> 
         <span class="section-title-line"></span> </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
         <div class="service-box bg-white text-center">
@@ -118,7 +118,7 @@
         <div class="service-box bg-white text-center">
           <div class="icon"> <i class="fas fa-map-marked"></i> </div>
           <div class="icon-text">
-            <h4 class="title-box">Cover Six Different Times of the Day</h4>
+            <h4 class="title-box">Cover Six Different Light Conditions</h4>
             <p>The O2DTD dataset is collected at six different times of the day to cover the light conditions affecting autonomous navigation (dawn, morning, afternoon, sunset, twilight, and night).</p>
           </div>
         </div>
