--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           <div class="icon"> <i class="fas fa-paint-brush"></i> </div>
           <div class="icon-text">
             <h4 class="title-box">Segmentation Benchmark</h4>
-            <p>We also present an off-road desert trail segmentation benchmark called Desert Trail Segmentation Network (DTSNet). The proposed DTSNet model is trained using various loss functions, optimizers, and learning rates.</p>
+            <p>We also present an off-road desert trail segmentation benchmark called DTSNet, which is trained using various loss functions, optimizers, and learning rates.</p>
           </div>
         </div>
       </div>
