--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="service-box bg-white text-center">
           <div class="icon"> <i class="fas fa-bug"></i> </div>
           <div class="icon-text">
-            <h4 class="title-box">Easy-to-Use Data Format</h4>
+            <h4 class="title-box">Easy-to-Use Data and Labels Format</h4>
             <p>All the images and annotations in the O2DTD dataset are stored in PNG format, enabling the researchers to use them for their research easily.</p>
           </div>
         </div>
@@ -145,8 +145,8 @@
         <div class="service-box bg-white text-center">
           <div class="icon"> <i class="fas fa-paint-brush"></i> </div>
           <div class="icon-text">
-            <h4 class="title-box">Segmentation Benchmark</h4>
-            <p>We also present an off-road desert trail segmentation benchmark called DTSNet, which is trained using various loss functions, optimizers, and learning rates.</p>
+            <h4 class="title-box">Off-road Desert Trail Segmentation Benchmark</h4>
+            <p>We also present the segmentation benchmark called DTSNet, which is trained using various loss functions, optimizers, and learning rates.</p>
           </div>
         </div>
       </div>
