--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <div class="icon"> <i class="fas fa-map-marked"></i> </div>
           <div class="icon-text">
             <h4 class="title-box">Cover Six Different Light Conditions</h4>
-            <p>The O2DTD dataset covers six distinct light conditions (dawn, morning, afternoon, sunset, twilight, and night) to develop robust autonomous navigation system.</p>
+            <p>The O2DTD dataset covers six different light conditions (dawn, morning, afternoon, sunset, twilight, and night) affecting autonomous navigation.</p>
           </div>
         </div>
       </div>
