--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           <div class="icon"> <i class="fas fa-comments"></i> </div>
           <div class="icon-text">
             <h4 class="title-box">Over 5,000 Images with Pixel Level Annotations</h4>
-            <p>The O2DTD dataset contains over 5,000 images with fine-grained pixel level annotations of three classes (sky, ground, and trail).</p>
+            <p>The O2DTD dataset contains over 5,000 images with fine-grained pixel level annotations of three classes (sky, ground, and trail) to train and evaluate the algorithms.</p>
           </div>
         </div>
       </div>
