--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <span class="section-title-line"></span> </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
         <div class="service-box bg-white text-center">
-          <div class="icon"> <i class="fas fa-chart-line"></i> </div>
+          <div class="icon"> <i class="fad fa-bullhorn"></i> </div>
           <div class="icon-text">
             <h4 class="title-box">First Dataset for Desert Free Space Detection</h4>
             <p>The O2DTD dataset is the first dataset curated to detect desert trails, promoting the off-road autonomous navigation and driving field.</p>
