--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <span class="section-title-line"></span> </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
         <div class="service-box bg-white text-center">
-          <div class="icon"> <i class="fad fa-bullhorn"></i> </div>
+          <div class="icon"> <i class="fas fa-bullhorn"></i> </div>
           <div class="icon-text">
             <h4 class="title-box">First Dataset for Desert Free Space Detection</h4>
             <p>The O2DTD dataset is the first dataset curated to detect desert trails, promoting the off-road autonomous navigation and driving field.</p>
@@ -107,7 +107,7 @@
       </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
         <div class="service-box bg-white text-center">
-          <div class="icon"> <i class="fas fa-bullhorn "></i> </div>
+          <div class="icon"> <i class="fas fa-map-marked-alt"></i> </div>
           <div class="icon-text">
             <h4 class="title-box">Collected in Natural Desert Environment</h4>
             <p>The O2DTD dataset is collected in Abu Dhabi, United Arab Emirates, in an open desert space at 24°22.5'N latitude and 54°34.5'E longitude.</p>
