--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
         <div class="service-box bg-white text-center">
-          <div class="icon"> <i class="fas fa-map-marked"></i> </div>
+          <div class="icon"> <i class="fas fa-cloud-sun"></i></div>
           <div class="icon-text">
             <h4 class="title-box">Cover Six Different Light Conditions</h4>
             <p>The O2DTD dataset covers six different light conditions (dawn, morning, afternoon, sunset, twilight, and night) affecting autonomous navigation.</p>
@@ -125,7 +125,7 @@
       </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
         <div class="service-box bg-white text-center">
-          <div class="icon"> <i class="fas fa-bug"></i> </div>
+          <div class="icon"> <i class="fas fa-images"></i> </div>
           <div class="icon-text">
             <h4 class="title-box">Easy-to-Use Data and Labels Format</h4>
             <p>All the images and annotations in the O2DTD dataset are stored in PNG format, enabling the researchers to use them for their research easily.</p>
@@ -134,7 +134,7 @@
       </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
         <div class="service-box bg-white text-center">
-          <div class="icon"> <i class="fas fa-comments"></i> </div>
+          <div class="icon"> <i class="fas fa-database"></i> </div>
           <div class="icon-text">
             <h4 class="title-box">Over 5,000 Images with Pixel Level Annotations</h4>
             <p>The O2DTD dataset contains over 5,000 images with pixel-level annotations of three classes (sky, ground, and trail) to train and evaluate the algorithms.</p>
@@ -143,7 +143,7 @@
       </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
         <div class="service-box bg-white text-center">
-          <div class="icon"> <i class="fas fa-paint-brush"></i> </div>
+          <div class="icon"> <i class="fas fa-cogs"></i> </div>
           <div class="icon-text">
             <h4 class="title-box">Off-road Desert Trail Segmentation Benchmark</h4>
             <p>We also present the segmentation benchmark called DTSNet, which is trained using various loss functions, optimizers, and learning rates.</p>
