--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
         <div class="service-box bg-white text-center">
-          <div class="icon"> <i class="fas fa-clouds-sun"></i></div>
+          <div class="icon"> <i class="fas fa-clock"></i></div>
           <div class="icon-text">
             <h4 class="title-box">Cover Six Different Light Conditions</h4>
             <p>The O2DTD dataset covers six different light conditions (dawn, morning, afternoon, sunset, twilight, and night) affecting autonomous navigation.</p>
