--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
       <div class="col-md-6 mb-50">
         <div class="section-info">
           <div class="sub-title-paragraph">
-            <h4>You can conquer the world.</h4>
-            <h5>If you have right set of mind and thus you can rule the world. Cheers!</h5>
+            <h4>Motivation</h4>
             <p>Free space detection plays a vital role in autonomous vehicle technology for both perception and navigation. Over the past decade, 
                 it has been established that deep learning-based approaches to free space identification may be reliably applied in the real world. 
                 However, these efforts primarily focused on on-road urban settings, and few algorithms were developed for free space detection in 
@@ -177,7 +176,7 @@
       <div class="gallery no-padding col-lg-10 col-sm-10 mx-auto">
         <div class="col-lg-4 col-sm-6 dawn no-padding">
           <div class="item-img"> <a class="single-image"></a>
-            <div class="part-img"> <img src="images/Dawn 325.png" alt="image">
+            <div class="part-img"> <img src="images/Dawn 325.png" alt="" class="img-responsive">
               <div class="overlay-img">
                 <h4>Dawn</h4>
                 <h6>Image 1</h6>
