--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <div class="gallery no-padding col-lg-10 col-sm-10 mx-auto">
         <div class="col-lg-4 col-sm-6 dawn no-padding">
           <div class="item-img"> <a class="single-image"></a>
-            <div class="part-img"> <img src="images/Dawn 325.png" alt="" class="img-responsive">
+            <div class="section-img"> <img src="images/Dawn 325.png" alt="" class="img-responsive">
               <div class="overlay-img">
                 <h4>Dawn</h4>
                 <h6>Image 1</h6>
