--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 we present a new dataset named Off-Road Open Desert Trail Detection (O2DTD), the first dataset focused on desert free space detection. 
                 The dataset was collected with six different light conditions (dawn, morning, afternoon, sunset, twilight, and night).</p>
           </div>
-          <a href="#" class="anchor-btn">Learn more <i class="fas fa-arrow-right pd-lt-10"></i></a> </div>
+        </div>
       </div>
       <div class="col-md-6 mb-50">
         <div class="section-img"> <img src="images/Intro.png" alt="" class="img-responsive"/> </div>
@@ -175,8 +175,8 @@
       <br>
       <div class="gallery no-padding col-lg-10 col-sm-10 mx-auto">
         <div class="col-lg-4 col-sm-6 dawn no-padding">
-          <div class="item-img"> <a class="single-image"></a>
-            <div class="section-img"> <img src="images/Dawn 325.png" alt="" class="img-responsive">
+          <div class="item-img"> <a class="img-responsive"></a>
+            <div class="part-img"> <img src="images/Dawn 325.png" alt="image">
               <div class="overlay-img">
                 <h4>Dawn</h4>
                 <h6>Image 1</h6>
