--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-6 dawn no-padding">
-          <div class="item-img"> <a class="single-image"></a>
+          <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img src="images/Dawn 518.png" alt="image">
               <div class="overlay-img">
                 <h4>Dawn</h4>
@@ -195,7 +195,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-6 dawn no-padding">
-          <div class="item-img"> <a class="single-image"></a>
+          <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img src="images/Dawn 791.png" alt="image">
               <div class="overlay-img">
                 <h4>Dawn</h4>
@@ -206,7 +206,7 @@
         </div>
 
         <div class="col-lg-4 col-sm-6 dawn no-padding">
-          <div class="item-img"> <a class="single-image"></a>
+          <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img src="images/Dawn 325L.png" alt="image">
               <div class="overlay-img">
                 <h4>Dawn</h4>
@@ -216,7 +216,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-6 dawn no-padding">
-          <div class="item-img"> <a class="single-image"></a>
+          <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img src="images/Dawn 518L.png" alt="image">
               <div class="overlay-img">
                 <h4>Dawn</h4>
@@ -226,7 +226,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-6 dawn no-padding">
-          <div class="item-img"> <a class="single-image"></a>
+          <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img src="images/Dawn 791L.png" alt="image">
               <div class="overlay-img">
                 <h4>Dawn</h4>
@@ -236,7 +236,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-6 morning no-padding">
-            <div class="item-img"> <a class="single-image"></a>
+            <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="MorningImg1" src="images/Morning 125.png" alt="image" style="display: none;">
    <script>
       const MorBtn1 = document.getElementById("MorBtnID");
@@ -253,7 +253,7 @@
           </div>                 
         </div>                 
         <div class="col-lg-4 col-sm-6 morning no-padding">
-          <div class="item-img"> <a class="single-image"></a>
+          <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="MorningImg2" src="images/Morning 316.png" alt="image" style="display: none;">
    <script>
       const MorBtn2 = document.getElementById("MorBtnID");
@@ -270,7 +270,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-6 morning no-padding">
-          <div class="item-img"> <a class="single-image"></a>
+          <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="MorningImg3" src="images/Morning 505.png" alt="image" style="display: none;">
    <script>
       const MorBtn3 = document.getElementById("MorBtnID");
@@ -287,7 +287,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-6 morning no-padding">
-            <div class="item-img"> <a class="single-image"></a>
+            <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="MorningImg4" src="images/Morning 125L.png" alt="image" style="display: none;">
    <script>
       const MorBtn4 = document.getElementById("MorBtnID");
@@ -304,7 +304,7 @@
           </div>                 
         </div>                 
         <div class="col-lg-4 col-sm-6 morning no-padding">
-          <div class="item-img"> <a class="single-image"></a>
+          <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="MorningImg5" src="images/Morning 316L.png" alt="image" style="display: none;">
    <script>
       const MorBtn5 = document.getElementById("MorBtnID");
@@ -321,7 +321,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-6 morning no-padding">
-          <div class="item-img"> <a class="single-image"></a>
+          <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="MorningImg6" src="images/Morning 505L.png" alt="image" style="display: none;">
    <script>
       const MorBtn6 = document.getElementById("MorBtnID");
@@ -338,7 +338,7 @@
           </div>
         </div>
           <div class="col-lg-4 col-sm-6 afternoon no-padding">
-          <div class="item-img"> <a class="single-image"></a>
+          <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="AfternoonImg1" src="images/Afternoon 029.png" alt="image" style="display: none;">
    <script>
       const AftBtn1 = document.getElementById("AftBtnID");
@@ -355,7 +355,7 @@
           </div>
         </div>          
           <div class="col-lg-4 col-sm-6 afternoon no-padding">
-          <div class="item-img"> <a class="single-image"></a>
+          <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="AfternoonImg2" src="images/Afternoon 574.png" alt="image" style="display: none;">
    <script>
       const AftBtn2 = document.getElementById("AftBtnID");
@@ -372,7 +372,7 @@
           </div>
         </div>          
           <div class="col-lg-4 col-sm-6 afternoon no-padding">
-          <div class="item-img"> <a class="single-image"></a>
+          <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="AfternoonImg3" src="images/Afternoon 642.png" alt="image" style="display: none;">
    <script>
       const AftBtn3 = document.getElementById("AftBtnID");
@@ -389,7 +389,7 @@
           </div>
         </div>          
           <div class="col-lg-4 col-sm-6 afternoon no-padding">
-          <div class="item-img"> <a class="single-image"></a>
+          <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="AfternoonImg4" src="images/Afternoon 029L.png" alt="image" style="display: none;">
    <script>
       const AftBtn4 = document.getElementById("AftBtnID");
@@ -406,7 +406,7 @@
           </div>
         </div>          
           <div class="col-lg-4 col-sm-6 afternoon no-padding">
-          <div class="item-img"> <a class="single-image"></a>
+          <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="AfternoonImg5" src="images/Afternoon 574L.png" alt="image" style="display: none;">
    <script>
       const AftBtn5 = document.getElementById("AftBtnID");
@@ -423,7 +423,7 @@
           </div>
         </div>          
           <div class="col-lg-4 col-sm-6 afternoon no-padding">
-          <div class="item-img"> <a class="single-image"></a>
+          <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="AfternoonImg6" src="images/Afternoon 642L.png" alt="image" style="display: none;">
    <script>
       const AftBtn6 = document.getElementById("AftBtnID");
@@ -440,7 +440,7 @@
           </div>
         </div>          
         <div class="col-lg-4 col-sm-6 sunset no-padding">
-            <div class="item-img"> <a class="single-image"></a>
+            <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="SunsetImg1" src="images/Sunset 004.png" alt="image" style="display: none;">
    <script>
       const SunBtn1 = document.getElementById("SunBtnID");
@@ -457,7 +457,7 @@
           </div>                 
         </div>                 
         <div class="col-lg-4 col-sm-6 sunset no-padding">
-          <div class="item-img"> <a class="single-image"></a>
+          <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="SunsetImg2" src="images/Sunset 446.png" alt="image" style="display: none;">
    <script>
       const SunBtn2 = document.getElementById("SunBtnID");
@@ -474,7 +474,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-6 sunset no-padding">
-          <div class="item-img"> <a class="single-image"></a>
+          <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="SunsetImg3" src="images/Sunset 489.png" alt="image" style="display: none;">
    <script>
       const SunBtn3 = document.getElementById("SunBtnID");
@@ -491,7 +491,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-6 sunset no-padding">
-            <div class="item-img"> <a class="single-image"></a>
+            <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="SunsetImg4" src="images/Sunset 004L.png" alt="image" style="display: none;">
    <script>
       const SunBtn4 = document.getElementById("SunBtnID");
@@ -508,7 +508,7 @@
           </div>                 
         </div>                 
         <div class="col-lg-4 col-sm-6 sunset no-padding">
-          <div class="item-img"> <a class="single-image"></a>
+          <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="SunsetImg5" src="images/Sunset 446L.png" alt="image" style="display: none;">
    <script>
       const SunBtn5 = document.getElementById("SunBtnID");
@@ -525,7 +525,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-6 sunset no-padding">
-          <div class="item-img"> <a class="single-image"></a>
+          <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="SunsetImg6" src="images/Sunset 489L.png" alt="image" style="display: none;">
    <script>
       const SunBtn6 = document.getElementById("SunBtnID");
@@ -542,7 +542,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-6 twilight no-padding">
-            <div class="item-img"> <a class="single-image"></a>
+            <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="TwilightImg1" src="images/Twilight 197.png" alt="image" style="display: none;">
    <script>
       const TwiBtn1 = document.getElementById("TwiBtnID");
@@ -559,7 +559,7 @@
           </div>                 
         </div>                 
         <div class="col-lg-4 col-sm-6 twilight no-padding">
-          <div class="item-img"> <a class="single-image"></a>
+          <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="TwilightImg2" src="images/Twilight 251.png" alt="image" style="display: none;">
    <script>
       const TwiBtn2 = document.getElementById("TwiBtnID");
@@ -576,7 +576,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-6 twilight no-padding">
-          <div class="item-img"> <a class="single-image"></a>
+          <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="TwilightImg3" src="images/Twilight 382.png" alt="image" style="display: none;">
    <script>
       const TwiBtn3 = document.getElementById("TwiBtnID");
@@ -593,7 +593,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-6 twilight no-padding">
-            <div class="item-img"> <a class="single-image"></a>
+            <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="TwilightImg4" src="images/Twilight 197L.png" alt="image" style="display: none;">
    <script>
       const TwiBtn4 = document.getElementById("TwiBtnID");
@@ -610,7 +610,7 @@
           </div>                 
         </div>                 
         <div class="col-lg-4 col-sm-6 twilight no-padding">
-          <div class="item-img"> <a class="single-image"></a>
+          <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="TwilightImg5" src="images/Twilight 251L.png" alt="image" style="display: none;">
    <script>
       const TwiBtn5 = document.getElementById("TwiBtnID");
@@ -627,7 +627,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-6 twilight no-padding">
-          <div class="item-img"> <a class="single-image"></a>
+          <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="TwilightImg6" src="images/Twilight 382L.png" alt="image" style="display: none;">
    <script>
       const TwiBtn6 = document.getElementById("TwiBtnID");
@@ -644,7 +644,7 @@
           </div>
         </div>      
         <div class="col-lg-4 col-sm-6 night no-padding">
-            <div class="item-img"> <a class="single-image"></a>
+            <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="NightImg1" src="images/Night 631.png" alt="image" style="display: none;">
    <script>
       const NigBtn1 = document.getElementById("NigBtnID");
@@ -678,7 +678,7 @@
           </div>                 
         </div>        
         <div class="col-lg-4 col-sm-6 night no-padding">
-            <div class="item-img"> <a class="single-image"></a>
+            <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="NightImg3" src="images/Night 777.png" alt="image" style="display: none;">
    <script>
       const NigBtn3 = document.getElementById("NigBtnID");
@@ -695,7 +695,7 @@
           </div>                 
         </div>            
         <div class="col-lg-4 col-sm-6 night no-padding">
-            <div class="item-img"> <a class="single-image"></a>
+            <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="NightImg4" src="images/Night 631L.png" alt="image" style="display: none;">
    <script>
       const NigBtn4 = document.getElementById("NigBtnID");
@@ -712,7 +712,7 @@
           </div>                 
         </div>    
         <div class="col-lg-4 col-sm-6 night no-padding">
-            <div class="item-img"> <a class="single-image"></a>
+            <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="NightImg5" src="images/Night 514L.png" alt="image" style="display: none;">
    <script>
       const NigBtn5 = document.getElementById("NigBtnID");
@@ -729,7 +729,7 @@
           </div>                 
         </div>        
         <div class="col-lg-4 col-sm-6 night no-padding">
-            <div class="item-img"> <a class="single-image"></a>
+            <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="NightImg6" src="images/Night 777L.png" alt="image" style="display: none;">
    <script>
       const NigBtn6 = document.getElementById("NigBtnID");
