--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
           </div>                 
         </div>    
         <div class="col-lg-4 col-sm-6 night no-padding">
-            <div class="item-img"> <a class="single-image"></a>
+            <div class="item-img"> <a class="img-responsive"></a>
             <div class="part-img"> <img id="NightImg2" src="images/Night 514.png" alt="image" style="display: none;">
    <script>
       const NigBtn2 = document.getElementById("NigBtnID");
