--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 <!-- End Services --> 
 
 <!-- Gallery -->
-<div class="portfolio section-padding" data-scroll-index='3'>
+<div class="portfolio section-padding bg-grey" data-scroll-index='3'>
   <div class="container-fluid">
     <div class="row">
       <div class="col-lg-12 section-title text-center">
