--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
     <div class="row">
       <div class="col-md-12 section-title text-center">
         <h3>O2DTD Dataset Features</h3>
-        <p>Vestibulum elementum dui tempus dolor gravida, vel mattis erat fermentum.</p> 
         <span class="section-title-line"></span> </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
         <div class="service-box bg-white text-center">
@@ -164,20 +163,39 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 section-title text-center">
-        <h3>O2DTD Dataset Overview</h3>
-        <p>The overarching goal of the O2DTD dataset is to help advance autonomous driving and navigation systems for traversing less focused arid landscapes.</p>
+        <h3>O2DTD Dataset Description</h3>
         <span class="section-title-line"></span> </div>
       <div class="col-md-12 mb-50">
         <div class="section-info">
           <div class="sub-title-paragraph">
-            <h4>Motivation</h4>
-            <p>Free space detection plays a vital role in autonomous vehicle technology for both perception and navigation. Over the past decade, 
-                it has been established that deep learning-based approaches to free space identification may be reliably applied in the real world. 
-                However, these efforts primarily focused on on-road urban settings, and few algorithms were developed for free space detection in 
-                off-road contexts. Nonetheless, the available off-road datasets and research do not significantly emphasize desert traversability analysis. 
-                Consequently, it is necessary to explore how well self-driving cars perform in harsh unstructured, and arid environments. To this end, 
-                we present a new dataset named Off-Road Open Desert Trail Detection (O2DTD), the first dataset focused on desert free space detection. 
-                The dataset was collected with six different light conditions (dawn, morning, afternoon, sunset, twilight, and night).</p>
+
+
+Autonomous vehicle technologies rely heavily on freespace detection for visual perception and route planning. In the preceding decade, it was demonstrated that freespace detection methods based on deep learning are viable. However, these attempts primarily dealt with urban on-road environments, and few deep learning-based algorithms were developed for free space detection in off-road scenarios. Nevertheless, to our knowledge, no work has been reported for detecting desert freespace due to the absence of relevant datasets and benchmarks. For research purposes, we curated a new dataset named Off-Road Open Desert Trail Detection (O2DTD), which is the first dataset on desert freespace detection. The dataset was collected with six different light conditions (dawn, morning, afternoon, sunset, twilight, and night), containing a total of 5,045 RGB images, as summarized in Table I. Moreover, as can be seen in the attached demo, each image is labeled with three classes consisting of the sky (blue), ground (brown), and trail (gray) regions.
+
+Table I: Summary of the proposed off-road open desert trail detection (O2DTD) dataset
+
+|Type|Original Images|Labels|Split Ratio|
+| :-: | :-: | :-: | :-: |
+|||RGB|Single     Channel|Train (70%)|Val (10%)|Test (20%)|
+|Dawn|813|813|813|569|81|163|
+|Morning|865|865|865|606|87|172|
+|Afternoon|922|922|922|645|92|185|
+|Sunset|907|907|907|635|91|181|
+|Twilight|694|694|694|486|69|139|
+|Night|844|844|844|591|84|169|
+|Total|5,045|5,045|5,045|3,532|504|1,009|
+
+All the images and ground truth labels in the dataset are stored in PNG format with 360×480 resolution, making it easy to use. Besides, we have randomly split the dataset for each illumination condition in the ratio of 70:10:20 for training, validation, and testing purposes of the model. These images and labels are stored separately in sub-folders inside the main directory, “O2DTD Dataset”. Further, we have provided the ground truth labels in two formats (single channel and RGB). Table II provides the annotation details.
+
+Table II:  Ground truth annotation details for the O2DTD dataset
+
+|Class|Single Channel|RGB|
+| :-: | :- | :-: |
+||Pixel Value|Color Palette|
+|Sky|1|(77, 190, 238)|
+|Ground|2|(160, 130, 95)|
+|Trail|3|(160, 160, 160)|              
+              
           </div>
         </div>
       </div>
