--- a/index.html
+++ b/index.html
@@ -169,44 +169,20 @@
           <div class="sub-title-paragraph">
 
 
-Autonomous vehicle technologies rely heavily on freespace detection for visual perception and route planning. In the preceding decade, it was demonstrated that freespace detection methods based on deep learning are viable. However, these attempts primarily dealt with urban on-road environments, and few deep learning-based algorithms were developed for free space detection in off-road scenarios. Nevertheless, to our knowledge, no work has been reported for detecting desert freespace due to the absence of relevant datasets and benchmarks. For research purposes, we curated a new dataset named Off-Road Open Desert Trail Detection (O2DTD), which is the first dataset on desert freespace detection. The dataset was collected with six different light conditions (dawn, morning, afternoon, sunset, twilight, and night), containing a total of 5,045 RGB images, as summarized in Table I. Moreover, as can be seen in the attached demo, each image is labeled with three classes consisting of the sky (blue), ground (brown), and trail (gray) regions.
+The dataset was collected with six different light conditions (dawn, morning, afternoon, sunset, twilight, and night), containing a total of 5,045 RGB images, 
+as summarized in Table below. Moreover, each image is labeled with three classes consisting of the sky (blue), ground (yellow), and trail (gray) regions.
 
 
 <table>
   <tr>
-    <th>Company</th>
-    <th>Contact</th>
-    <th>Country</th>
+    <th rowspan="2">Type</th>
+    <th rowspan="2">Images</th>
+    <th colspan="3">Split Ratio</th>
   </tr>
   <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
-  </tr>
-  <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
-  </tr>
-  <tr>
-    <td>Ernst Handel</td>
-    <td>Roland Mendel</td>
-    <td>Austria</td>
-  </tr>
-  <tr>
-    <td>Island Trading</td>
-    <td>Helen Bennett</td>
-    <td>UK</td>
-  </tr>
-  <tr>
-    <td>Laughing Bacchus Winecellars</td>
-    <td>Yoshi Tannamuri</td>
-    <td>Canada</td>
-  </tr>
-  <tr>
-    <td>Magazzini Alimentari Riuniti</td>
-    <td>Giovanni Rovelli</td>
-    <td>Italy</td>
+    <td>Train (70%)</td>
+    <td>Validation (10%)</td>
+    <td>Test (20%)</td>
   </tr>
 </table>
 
