--- a/index.html
+++ b/index.html
@@ -180,9 +180,16 @@ as summarized in Table below. Moreover, each image is labeled with three classes
     <th colspan="3">Split Ratio</th>
   </tr>
   <tr>
-    <td>Train (70%)</td>
-    <td>Validation (10%)</td>
-    <td>Test (20%)</td>
+    <th>Train (70%)</td>
+    <th>Validation (10%)</td>
+    <th>Test (20%)</td>
+  </tr>
+  <tr>
+    <td>Dawn</td>
+    <td>813</td>
+    <td>569</td>
+    <td>81</td>
+    <td>163</td>
   </tr>
 </table>
 
