--- a/index.html
+++ b/index.html
@@ -191,37 +191,41 @@ as summarized in Table below. Moreover, each image is labeled with three classes
     <td>81</td>
     <td>163</td>
   </tr>
-  <tr>Morning</td>
+  <tr>
+    <td>Morning</td>
     <td>865</td>
     <td>606</td>
     <td>87</td>
     <td>172</td>
   </tr>
-  <tr>Afternoon</td>
+  <tr>
+    <td>Afternoon</td>
     <td>922</td>
     <td>645</td>
     <td>92</td>
     <td>185</td>
   </tr>
-  <tr>Morning</td>
+  <tr>Sunset</td>
     <td>907</td>
     <td>635</td>
     <td>91</td>
     <td>181</td>
   </tr>
-  <tr>Morning</td>
+  <tr>
+    <td>Twilight</td>
     <td>694</td>
     <td>486</td>
     <td>69</td>
     <td>139</td>
   </tr>
-  <tr>Morning</td>
+  <tr>
+    <td>Night</td>
     <td>844</td>
     <td>591</td>
     <td>84</td>
     <td>169</td>
   </tr>
-  <tr>Total</td>
+    <td>Total</td>
     <td>5045</td>
     <td>3532</td>
     <td>504</td>
