--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ as summarized in Table below. Moreover, each image is labeled with three classes
     <td>92</td>
     <td>185</td>
   </tr>
-  <tr>Sunset</td>
+    <td>Sunset</td>
     <td>907</td>
     <td>635</td>
     <td>91</td>
