--- a/index.html
+++ b/index.html
@@ -224,11 +224,11 @@ as summarized in Table below. Moreover, each image is labeled with three classes
     <td>84</td>
     <td>169</td>
   </tr>
-    <td>Total</td>
-    <td>5045</td>
-    <td>3532</td>
-    <td>504</td>
-    <td>1009</td>
+    <th>Total</td>
+    <th>5045</td>
+    <th>3532</td>
+    <th>504</td>
+    <th>1009</td>
   </tr>
       
       
