--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       <div class="col-md-12 section-title text-center">
         <h3>O2DTD Dataset Description</h3>
         <span class="section-title-line"></span> </div>
-      <div class="col-md-12 mb-50">
+      <div class="col-md-12 mb-30">
         <div class="section-info">
           <div class="sub-title-paragraph">
 <p>
@@ -167,6 +167,8 @@ The dataset was collected with six different light conditions (dawn, morning, af
 as summarized in Table below. Moreover, each image is labeled with three classes consisting of the sky (blue), ground (yellow), and trail (gray) regions.
 </p>
 <br>
+<center>Table I: Summary of the off-road open desert trail detection (O2DTD) dataset 
+</center>
 <table>
     <tr>
     <th rowspan="2">Type</th>
@@ -263,7 +265,7 @@ All the images and ground truth labels in the dataset are stored in PNG format w
   </tr>
   <tr>
     <td>Trail</td>
-    <td>2</td>
+    <td>3</td>
     <td>(177, 162, 142)</td>
   </tr>
     
