--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ All the images and ground truth labels in the dataset are stored in PNG format w
     (single channel and RGB). Table II provides the annotation details.
 </p>
 <br>
-<style="text-align:center">Table II:  Ground truth annotation details for the O2DTD dataset</>
+<center>Table II:  Ground truth annotation details for the O2DTD dataset</center>
 
 <table>
     <tr>
